--- a/README.Rmd
+++ b/README.Rmd
@@ -25,7 +25,7 @@ Assignment:
 1. Download the data
 2. Create a new variable in R called "age group"
 3. Place the "age group" into the following catagories: < 18, 18-24, 25-34, 35-44, 45-54, 55-64, 65+
-4. For a single day: Plot distributions of number impressions and click-through-rate (CTR = click/impression) for the age groups.
+4. For all 31 days: Plot distributions of number impressions and click-through-rate (CTR = click/impression) for the age groups.
 5. Define new variable to segment users based on click behavior.
 6. Explore data and make visual comparisons across user segments.
 7. Create metrics/measurement/statistics that summarize the data.
@@ -52,28 +52,30 @@ setwd("/Users/wkerneck/desktop/ClickData/")
 
 #### Getting the Data
 
-Create a data frame called daytweleve_data from the nyt12.csv.
+We will create a loop to in R to pull all 31 .csv files. The files will be downlaoded to your working directory.
 
 ```{r}
-download("http://stat.columbia.edu/~rachel/datasets/nyt12.csv", destfile="nyt12.csv")
+nyt <- NULL
 
-cat("Data downloaded into current working directory")
+for (i in 1:31){  nyt_temp <- read.csv(url(paste("http://stat.columbia.edu/~rachel/datasets/nyt",i,".csv",sep="")));  nyt_temp$day <- i;  nyt <- rbind(nyt,nyt_temp)}
+
+nyt_origin <- nyt
+
 ```
+
 
 ****************************
 
 
 #### Analysis of the data set
 
-Rough analysis of the datasets. The nyt12.csv dataframe has 396308 observations of 5 variables. Below are the details of dataset:
+Rough analysis of all the datasets. There are 14905865 observations of 6 variables. Below are the details of dataset:
 
-nyt12.csv
 
 ```{r}
-daytwelve_data <- read.csv("nyt12.csv")
-dim(daytwelve_data)
-str(daytwelve_data)
-summary(daytwelve_data)
+dim(nyt)
+str(nyt)
+summary(nyt)
 ```
 
 
@@ -81,16 +83,15 @@ Let's take a look how the data is distributed through the use of data visualizat
 
 
 ```{r}
-hist(daytwelve_data$Age, main="", xlab="Age")
-```
-
-
-```{r}
-hist(daytwelve_data$Impressions, main="", xlab="# of Impressions")
+hist(nyt$Age, main="", xlab="Age")
 ```
 
 ```{r}
-range(daytwelve_data$Clicks)
+hist(nyt$Impressions, main="", xlab="# of Impressions")
+```
+
+```{r}
+range(nyt$Clicks)
 ```
 
 ****************************
@@ -101,9 +102,9 @@ range(daytwelve_data$Clicks)
 Create a new variable named "Age_group", that groups users into age categories into the following: < 18, 18-24, 25-34, 35-44, 45-54, 55-64, 65+
 
 ```{r}
-daytwelve_data$Age_Group <- cut(daytwelve_data$Age, c(-Inf, 18, 24, 34, 44, 54, 64, Inf))
+nyt$Age_Group <- cut(nyt$Age, c(-Inf, 18, 24, 34, 44, 54, 64, Inf))
 
-levels(daytwelve_data$Age_Group) <- c("<18", "18-24", "25-34", "35-44", "45-54", "55-64", "65+")
+levels(nyt$Age_Group) <- c("<18", "18-24", "25-34", "35-44", "45-54", "55-64", "65+")
 ```
 
 <br>
@@ -115,7 +116,7 @@ For a single day, plot the distributions of ‘number of impressions’ and ‘c
 2.1) Create a subset of data1 to exclude rows where there are no impressions (if there are no impressions, we assume there will be no clicks). Name the new object d1
 
 ```{r}
-d1 <- subset(daytwelve_data, Impressions>0)
+d1 <- subset(nyt, Impressions>0)
 ```
 
 <br>
@@ -143,6 +144,6 @@ ggplot(subset(d1, Impressions>0), aes(x=Impressions, fill=Age_Group))+
 
 ```{r}
 ggplot(subset(d1, CTR>0), aes(x=CTR, fill=Age_Group))+
-    labs(title="Click-through rate by age group (05/12/2012)")+
+    labs(title="Click-through rate by age group for the month of May 2012")+
     geom_histogram(binwidth=.025)
 ```
